--- a/src/App.css
+++ b/src/App.css
@@ -507,4 +507,10 @@ body.dark .created:hover .text{
 .header h1{
   margin-left: 20px;
 }
-
+.default-title{
+  grid-column: 1/-1;
+  grid-row: 1/4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
